[package]
name = "rust_server"
version = "0.1.0"
authors = ["Xander Jake de los Santos <xanderjakeq@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_cors = "0.5.2"
#cloud-storage-rs = "0.2.4"
cloud-storage = "0.4"
reqwest = "0.10.6"
tokio = { version = "0.2", features = ["full"] }
serde = "1.0.114"
firestore-db-and-auth = "0.6.0"
